--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A web application designed to do surveys for project research",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start":"nodemon server"
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/K-156/Attractiveness-Humor-Rating/issues"
   },
-  "homepage": "https://github.com/K-156/Attractiveness-Humor-Rating#readme"
+  "homepage": "https://github.com/K-156/Attractiveness-Humor-Rating#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
