running both FE and BE concurrently

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server"
+    "server": "nodemon server --ignore client",
+    "client": "npm start --prefix client",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\""
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
