--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/K-156/Attractiveness-Humor-Rating#readme",
   "dependencies": {
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "validator": "^13.7.0"
   },
   "devDependencies": {
