--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
+    "custom-id": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -34,6 +35,7 @@
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.0",
     "nodemon": "^2.0.20",
     "validator": "^13.7.0"
   },
