--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
+    "csv-parse": "^5.3.3",
+    "csv-parser": "^3.0.0",
     "custom-id": "^1.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -37,6 +39,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.20",
+    "readline": "^1.3.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
