--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
