--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.20",
     "readline": "^1.3.0",
+    "request": "^2.88.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
