--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.2.0",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
@@ -40,6 +41,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.20",
+    "papaparse": "^5.3.2",
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "validator": "^13.7.0"
