--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/K-156/Attractiveness-Humor-Rating#readme",
   "dependencies": {
     "@mui/x-data-grid": "^5.17.17",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
@@ -40,6 +41,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "papaparse": "^5.3.2",
     "readline": "^1.3.0",
