--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
+    "crypto-js": "^4.1.1",
     "csv-parse": "^5.3.3",
     "csv-parser": "^3.0.0",
     "custom-id": "^1.2.0",
@@ -43,6 +44,7 @@
     "nanoid": "^4.0.0",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
+    "otplib": "^12.0.1",
     "papaparse": "^5.3.2",
     "readline": "^1.3.0",
     "request": "^2.88.2",
