--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-status-codes": "^2.2.0",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
