--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build-client":"cd client && npm run build",
+    "build-client": "cd client && npm run build",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\""
@@ -35,6 +35,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.4.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -50,7 +52,8 @@
     "papaparse": "^5.3.2",
     "readline": "^1.3.0",
     "request": "^2.88.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
