--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "setup-production":"npm run install-client && npm run build-client && npm install",
-    "install-client":"cd client && npm install",
+    "setup-production": "npm run install-client && npm run build-client && npm install",
+    "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix client",
@@ -56,6 +56,9 @@
     "request": "^2.88.2",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.0.7"
   },
   "devDependencies": {
     "concurrently": "^7.6.0"
